[gd_scene load_steps=4 format=3 uid="uid://b1k2h35khc40y"]

[ext_resource type="Script" uid="uid://faswynkmbrw2" path="res://Scripts/Inventory/Inventory_Box.gd" id="1_1cx5j"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3xrnb"]
bg_color = Color(0.0991728, 0.182517, 0.188478, 1)
border_color = Color(0.482095, 0.689901, 0.704644, 1)
border_blend = true
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 1
anti_aliasing_size = 3.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_708pr"]
content_margin_left = 3.0
content_margin_top = 3.0
content_margin_right = 3.0
content_margin_bottom = 3.0
bg_color = Color(0.0515312, 0.0690738, 0.0920171, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_blend = true
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="InventoryBox" type="PanelContainer" node_paths=PackedStringArray("Butto")]
custom_minimum_size = Vector2(110, 30)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3xrnb")
script = ExtResource("1_1cx5j")
Butto = NodePath("ItemButton")

[node name="ItemButton" type="Button" parent="." groups=["DigitalBouncingButton"]]
layout_mode = 2
focus_mode = 0
mouse_filter = 2
theme_override_font_sizes/font_size = 15
disabled = true
action_mode = 0
autowrap_mode = 2
icon_alignment = 1

[node name="TextureRect" type="TextureRect" parent="ItemButton"]
visible = false
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 3

[node name="ItemName" type="Label" parent="ItemButton"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="ItemButton"]
visible = false
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -18.0
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 8
size_flags_vertical = 8
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_708pr")

[node name="Label" type="Label" parent="ItemButton/PanelContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 24
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="ItemButton" to="." method="_On_Item_Pressed"]
